<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dip"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10px"
            android:text="@string/tipoCamara"
            android:textSize="18dp" >
        </TextView>

        <Spinner
            android:id="@+id/tipoCamara"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10px"
            android:text="@string/nombreCamara"
            android:textSize="18dp" >
        </TextView>

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>

        <TextView
            android:id="@+id/lblIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10px"
            android:text="@string/ipCamara"
            android:textSize="18dp" >
        </TextView>

        <EditText
            android:id="@+id/txtIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10px"
            android:text="@string/loginCamara"
            android:textSize="18dp" >
        </TextView>

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="199dip"
            android:layout_height="wrap_content" >
        </EditText>

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/passwdCamara"
            android:textSize="18dip" >
        </TextView>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" >
        </EditText>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_marginTop="10dip"
                android:contentDescription="@string/Title"
                android:src="@drawable/save" >

            </ImageButton>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>